// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, all properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "availability": "Adaptation",
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
        "width": "150px",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<Text text=\\"Sample Text\\" />
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, no fs, all properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "availability": "Adaptation",
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
        "width": "150px",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.85, no handler, no fs, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<Text text=\\"Sample Text\\" />
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.86, with handler, all properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "availability": "Adaptation",
        "header": "col header",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "ID",
          "TotalNetAmount",
          "_CustomerPaymentTerms/CustomerPaymentTerms",
        ],
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
        "width": "150px",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.86, with handler, all properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<Button  core:require=\\"{ handler: 'sapux/fe/fpm/writer/test/extensions/custom/NewCustomColumn'}\\" text=\\"{=%{ID} + ' ' + %{TotalNetAmount} + ' ' + %{_CustomerPaymentTerms/CustomerPaymentTerms}}\\" press=\\"handler.onPress\\" />
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn 1.86, with handler, all properties 3`] = `
"sap.ui.define([
    \\"sap/m/MessageToast\\"
], function(MessageToast) {
    'use strict';

    return {
        onPress: function() {
            MessageToast.show(\\"CustomColumn action handler invoked.\\");
        }
    };
});
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, custom control 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, custom control 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<CustomXML text=\\"\\" />
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, only mandatory properties 1`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, only mandatory properties 2`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<Text text=\\"Sample Text\\" />
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, only mandatory properties 3`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, only mandatory properties 4`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<Text text=\\"Sample Text\\" />
</core:FragmentDefinition>
"
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, only mandatory properties 5`] = `
Object {
  "@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "NewCustomColumn": Object {
        "header": "col header",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "template": "sapux.fe.fpm.writer.test.extensions.custom.NewCustomColumn",
      },
    },
  },
  "items/@com.sap.vocabularies.UI.v1.LineItem": Object {
    "columns": Object {
      "ExistingCustomColumn": Object {
        "availability": "Default",
        "header": "{i18n>customColumn}",
        "horizontalAlign": "Center",
        "position": Object {
          "anchor": "DataField::BooleanProperty",
          "placement": "After",
        },
        "properties": Array [
          "BooleanProperty",
          "TextProperty",
        ],
        "template": "sap.fe.core.fpmExplorer.customColumnContent.CustomColumnButton",
        "width": "15em",
      },
    },
    "tableSettings": Object {
      "selectionMode": "Single",
    },
  },
}
`;

exports[`CustomAction generateCustomColumn generateCustomColumn, only mandatory properties 6`] = `
"<core:FragmentDefinition xmlns:core=\\"sap.ui.core\\" xmlns=\\"sap.m\\"
	xmlns:l=\\"sap.ui.layout\\">
		<Text text=\\"Sample Text\\" />
</core:FragmentDefinition>
"
`;
